force-app/main/default/objects/DRC_NBC_Packing_Details__c/DRC_NBC_Packing_Details__c.object-meta.xml
<CustomObject>
    <label>Packing Detail</label>
    <nameField>
        <displayFormat>Packing-{0000}</displayFormat>
        <label>Packing Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Packing Details</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>