force-app/main/default/objects/DRC_NBC_Packing_Details__c/fields/DRC_NBC_Packing_Qauntity__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Packing_Qauntity__c</fullName>
    <label>Packing Qauntity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>