force-app/main/default/objects/DRC_NBC_Packing_Details__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Packing Details</relationshipLabel>
    <relationshipName>Packing_Details</relationshipName>
    <type>Lookup</type>
</CustomField>